# launch_interface

./: .pre-commit-config.yaml  DESIGN.md  README.md  package.xml  pyproject.toml  setup.py
launch_interface/: __main__.py  cli.py  dry_run.py  extractor.py  model.py  parameters.py  serialise.py
schema/: args.schema.json  parse.schema.json
tests/: TESTING.md  conftest.py  test_args.py  test_parse.py  test_schema.py
tests/expected/: args_conditional_nodes.json  args_remappings_and_args.json  args_required_arg.json  parse_composable_nodes.json  parse_conditional_false.json  parse_conditional_true.json  parse_env_var.json  parse_execute_process.json  parse_include_chain.json  parse_include_substitution_arg.json  parse_include_xml.json  (+13 more)
tests/test_ws/src/test_nodes/: package.xml  setup.py
tests/test_ws/src/test_nodes/launch/: composable_nodes.launch.py  conditional_nodes.launch.py  env_var_substitution.launch.py  execute_process.launch.py  include_chain.launch.py  include_substitution_arg.launch.py  include_xml.launch.py  included.launch.py  multiple_nodes.launch.py  namespace_scoping.launch.py  nested_include_mid.launch.py  nested_include_root.launch.py  node_with_params.launch.py  on_process_exit.launch.py  opaque_function.launch.py  param_override.launch.py  remappings_and_args.launch.py  required_arg.launch.py  simple_node.launch.py  simple_node.launch.xml  simple_node.launch.yaml  unnamed_node.launch.py
tests/test_ws/src/test_nodes/params/: override_params.yaml  test_params.yaml
tests/test_ws/src/test_nodes/test_nodes/: node_a.py  node_b.py
